[package]
name = "coin-mixer-challenge"
version = "0.1.0"
authors = ["Karthik Ravikanti <karthik.ravikanti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.2.0", features = ["serde"] }
rand = "0.7.3"
reqwest = { version = "0.10.9", features = ["blocking", "json"] }
serde = { version = "1.0.118", features = ["derive"] }
structopt = "0.3.21"
url = "2.2.0"
